# core/proto/v1/service.swagger.yaml
@@ -34,7 +34,117 @@ paths:
           type: string
       tags:
         - activity
+  /gpx:
+    get:
+      summary: Get activity
+      operationId: CoreService_ListGPX
+      responses:
+        "200":
+          description: A successful response.
+          schema:
+            $ref: '#/definitions/v1ListGPXResponse'
+        default:
+          description: An unexpected error response.
+          schema:
+            $ref: '#/definitions/rpcStatus'
+      parameters:
+        - name: limit
+          in: query
+          required: false
+          type: integer
+          format: int32
+        - name: offset
+          in: query
+          required: false
+          type: integer
+          format: int32
+      tags:
+        - activity
+    post:
+      summary: Create gpx
+      operationId: CoreService_CreateGPX
+      responses:
+        "200":
+          description: A successful response.
+          schema:
+            $ref: '#/definitions/v1GPX'
+        default:
+          description: An unexpected error response.
+          schema:
+            $ref: '#/definitions/rpcStatus'
+      parameters:
+        - name: body
+          in: body
+          required: true
+          schema:
+            $ref: '#/definitions/v1CreateGPXRequest'
+      tags:
+        - gpx
   /gpx/{sku}:
+    get:
+      summary: Get gpx
+      description: Returns the gpx
+      operationId: CoreService_GetGPX
+      responses:
+        "200":
+          description: A successful response.
+          schema:
+            $ref: '#/definitions/v1GPX'
+        default:
+          description: An unexpected error response.
+          schema:
+            $ref: '#/definitions/rpcStatus'
+      parameters:
+        - name: sku
+          in: path
+          required: true
+          type: string
+      tags:
+        - gpx
+    delete:
+      summary: Delete gpx
+      operationId: CoreService_DeleteGPX
+      responses:
+        "200":
+          description: A successful response.
+          schema:
+            type: object
+            properties: {}
+        default:
+          description: An unexpected error response.
+          schema:
+            $ref: '#/definitions/rpcStatus'
+      parameters:
+        - name: sku
+          in: path
+          required: true
+          type: string
+      tags:
+        - gpx
+    put:
+      summary: Update gpx
+      operationId: CoreService_UpdateGPX
+      responses:
+        "200":
+          description: A successful response.
+          schema:
+            $ref: '#/definitions/v1GPX'
+        default:
+          description: An unexpected error response.
+          schema:
+            $ref: '#/definitions/rpcStatus'
+      parameters:
+        - name: sku
+          in: path
+          required: true
+          type: string
+        - name: gpx
+          in: query
+          required: false
+          type: string
+      tags:
+        - gpx
+  /gpx/{sku}/download:
     get:
       summary: Get gpx
       description: Returns the gpx
@@ -75,6 +185,13 @@ definitions:
         items:
           type: object
           $ref: '#/definitions/protobufAny'
+  v1CreateGPXRequest:
+    type: object
+    properties:
+      sku:
+        type: string
+      gpx:
+        type: string
   v1DownloadGPXResponse:
     type: object
     properties:
@@ -132,6 +249,14 @@ definitions:
         type: string
       Description:
         type: string
+      date:
+        type: string
+      purchased_at:
+        type: string
+      resources:
+        type: array
+        items:
+          type: string
   v1ListGPXResponse:
     type: object
     properties:
